adding messages to validation, changing error display