@@ -4,6 +4,8 @@ import java.time.LocalDateTime;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -27,11 +29,14 @@ public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler
 
         Map<String, Object> body = new LinkedHashMap<>();
         body.put("timestamp", LocalDateTime.now());
-        body.put("status", HttpStatus.BAD_REQUEST);
-        List<String> mappedErrors = ex.getBindingResult()
-                .getAllErrors().stream()
-                .map(this::getErrorMessage)
-                .toList();
+        body.put("status", status.value());
+        List<Map<String,String>> mappedErrors = ex.getBindingResult()
+                .getFieldErrors()
+                .stream()
+                .map(error -> Map.of(
+                        "field", error.getField(),
+                        "error", error.getDefaultMessage()))
+                .collect(Collectors.toList());
         body.put("errors", mappedErrors);
 
         return new ResponseEntity<>(body, headers, status);
